--- a/package.json
+++ b/package.json
@@ -30,12 +30,14 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "fs": "^0.0.1-security",
+    "mongoose": "^8.1.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1"
   },
   "devDependencies": {
     "@faker-js/faker": "^8.3.1",
     "@nestjs/cli": "^10.0.0",
+    "@nestjs/mongoose": "^10.0.2",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
     "@types/express": "^4.17.17",
