--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "test:e2e": "jest --config ./test/jest-e2e.json",
     "db-mig-gen": "drizzle-kit generate:pg",
     "db-mig-push": "drizzle-kit push:pg",
-    "db-seed": "ts-node src/seeders/index.ts"
+    "db-seed": "ts-node src/seeders/index.ts",
+    "db-seed-dev": "ts-node src/seederDev/roles.ts"
   },
   "dependencies": {
     "@neondatabase/serverless": "^0.9.0",
