--- a/package.json
+++ b/package.json
@@ -42,6 +42,8 @@
     "ejs": "^3.1.10",
     "fs": "^0.0.1-security",
     "jsonwebtoken": "^9.0.2",
+    "moment": "^2.30.1",
+    "moment-timezone": "^0.5.45",
     "mongoose": "^8.1.1",
     "multer": "^1.4.5-lts.1",
     "reflect-metadata": "^0.1.13",
