--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "drizzle-orm": "^0.30.0",
     "ejs": "^3.1.10",
     "fs": "^0.0.1-security",
+    "json2csv": "^6.0.0-alpha.2",
     "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.1",
     "moment-timezone": "^0.5.45",
