--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "csv-parser": "^3.0.0",
+    "dayjs": "^1.11.11",
     "drizzle-orm": "^0.30.0",
     "ejs": "^3.1.10",
     "fs": "^0.0.1-security",
